2004-10-21  Benoît Dejean  <tazforever@dlfp.org>

	* src/procactions.c: (renice_single_process),
	(kill_single_process): Trim whitespaces. Closes #125380.

2004-10-21  Benoît Dejean  <tazforever@dlfp.org>

	* AUTHORS:
	* src/callbacks.c: (cb_about_activate): Hello, i'm the new maintainer :)
	
	* src/procman.c: (procman_free_data), (main): Removed C99 comment.
	Added missing glibtop_close().
	
	* src/util.c: (get_size_string): s/K/KB/ Closes #127510.
	Fixed float constants.
	
	* src/interface.c: (create_main_window): Added a resize-grip.Thanks to
	Ken Harris. Closes #144848.

2004-10-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Post release bump.

2004-10-17  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version.
	* src/infoview.c: Add missing header.
	* src/interface.c: NULL vs. 0 fixes.
	* src/procman.c: Add missing header.

2004-08-28  Akagic Amila  <bono@linux.org.ba>

        * configure.in: Added 'bs' to ALL_LINGUAS.

2004-08-27  Iñaki Larrañaga  <dooteo@euskalgnu.org>

	* configure.in: Added "eu" (Basque) to ALL_LINGUAS.

2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-08-13  Vincent Noel  <vnoel@cox.net>

	* src/procdialogs.c (create_proc_field_page): Set GTK_SHADOW_IN
	for the "Process fields" in the preferences dialog. Fixes bug 150066.

2004-07-19  Kevin Vandersloot <kfv101 psu edu>

	* configure.in: release 2.7.0

2004-04-10  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-03-24  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "pa" (Punjabi) to ALL_LINGUAS.

2004-03-21  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-21  Kevin Vandersloot <kfv101 psu edu>

	* configure.in: release 2.6.0

2004-03-20  Kevin Vandersloot <kfv101 psu edu>

	* configure.in: require latest libgtop

2004-03-14  Kevin Vandersloot <kfv101 psu edu>
